# file-permission-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  file-permissions.py  pre-commit.py  setup.cfg
file_permission_hook/: main.py  subprocess_wrapper.py
src/: main.py  subprocess_wrapper.py
tests/: test_main.py
