[metadata]
name = check-file-permissions
version = 0.0.1
description = A script to check file permissions, to be used as a git pre-commit hook.
author = Anastasios Koutian
author_email = akoutian2@gmail.com
url = https://github.com/akoutian/file-permission-hook

[options]
packages = find:

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    check-file-permissions = file_permission_hook.main:main
