[metadata]
name = check-file-permissions
version = 1.1.1
description = A pre-commit hook to check file permissions.
author = Anastasios Koutian
author_email = akoutian2@gmail.com
url = https://github.com/akoutian/file-permission-hook

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-file-permissions = src.main:main
